# imu-ble-device-qt

./: .gitmodules  CMakeLists.txt
include/: worker.hpp
include/ble/: device_scanner.hpp  imu_device.hpp  notification_service.hpp
models/: cube.blend  cube.fbx
qml/: Cube.qml  main.qml  qml.qrc
qml/meshes/: cube.mesh
src/: main.cpp  worker.cpp
src/ble/: device_scanner.cpp  imu_device.cpp  notification_service.cpp
